[package]
name = "camera_finder"
version = "0.1.0"
authors = ["user"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
process-memory = "0"
winapi = { version = "0", features = ["tlhelp32", "memoryapi", "winnt", "minwindef", "processthreadsapi"]}
libc = "0"